[package]
name = "ecoblock-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
ecoblock_core = { path = "../ecoblock-core" }
ecoblock_crypto = { path = "../ecoblock-crypto" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
base64ct = { version = "1.8.0", features = ["alloc"] }
hex = "0.4"


